<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_forget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/registration"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="186dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_centerVertical="true"
        android:text="@string/userid"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="191dp"
        android:text="@string/last_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:text="@string/middle_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="70dp"
        android:text="@string/first_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignStart="@+id/textView"
        android:ems="10"
        android:hint="@string/your_surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignStart="@+id/textView"
        android:ems="10"
        android:hint="@string/your_father_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignStart="@+id/textView"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignStart="@+id/textView"
        android:ems="10"
        android:hint="@string/password_must_be_same"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignStart="@+id/textView"
        android:ems="10"
        android:hint="@string/alphabatic_and_numeric"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/example_gmail_com"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="128dp"
        android:text="@string/re_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btn_forgot"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:text="@string/forget_password"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/btn_add1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/btn_submit"
        android:text="add" />

    <Button
        android:id="@+id/c_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_submit"
        android:layout_marginEnd="19dp"
        android:text="complain" />
</RelativeLayout>